feat(): endpoint doc route
